docs/api/qiskit/0.37/qiskit.circuit.library.CSXGate.md
---
title: CSXGate
description: API reference for qiskit.circuit.library.CSXGate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.CSXGate
---

# CSXGate

<span id="qiskit.circuit.library.CSXGate" />

`CSXGate(label=None, ctrl_state=None)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/circuit/library/standard_gates/sx.py "view source code")

Bases: [`qiskit.circuit.controlledgate.ControlledGate`](qiskit.circuit.ControlledGate "qiskit.circuit.controlledgate.ControlledGate")

Controlled-√X gate.

Can be applied to a [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") with the [`csx()`](qiskit.circuit.QuantumCircuit#csx "qiskit.circuit.QuantumCircuit.csx") method.

**Circuit symbol:**

```python
q_0: ──■──
     ┌─┴──┐
q_1: ┤ √X ├
     └────┘
```

**Matrix representation:**

$$
\begin{split}C\sqrt{X} \ q_0, q_1 =
I \otimes \vert 0 \rangle\langle 0\vert  + \sqrt{X} \otimes \vert 1 \rangle\langle 1\vert   =
    \begin{pmatrix}
        1 & 0 & 0 & 0 \\
        0 & (1 + i) / 2 & 0 & (1 - i) / 2 \\
        0 & 0 & 1 & 0 \\
        0 & (1 - i) / 2 & 0 & (1 + i) / 2
    \end{pmatrix}\end{split}
$$

<Admonition title="Note" type="note">
  In Qiskit’s convention, higher qubit indices are more significant (little endian convention). In many textbooks, controlled gates are presented with the assumption of more significant qubits as control, which in our case would be q\_1. Thus a textbook matrix for this gate will be:

  ```python
       ┌────┐
  q_0: ┤ √X ├
       └─┬──┘
  q_1: ──■──
  ```

  $$
  \begin{split}C\sqrt{X}\ q_1, q_0 =
      \vert 0 \rangle\langle 0\vert  \otimes I + \vert 1 \rangle\langle 1\vert  \otimes \sqrt{X} =
      \begin{pmatrix}
          1 & 0 & 0 & 0 \\
          0 & 1 & 0 & 0 \\
          0 & 0 & (1 + i) / 2 & (1 - i) / 2 \\
          0 & 0 & (1 - i) / 2 & (1 + i) / 2
      \end{pmatrix}\end{split}
  $$
</Admonition>

Create new CSX gate.

## Attributes

<span id="qiskit.circuit.library.CSXGate.condition_bits" />

### condition\_bits

Get Clbits in condition.

**Return type**

`List`\[[`Clbit`](qiskit.circuit.Clbit "qiskit.circuit.classicalregister.Clbit")]

<span id="qiskit.circuit.library.CSXGate.ctrl_state" />

### ctrl\_state

Return the control state of the gate as a decimal integer.

**Return type**

`int`

<span id="qiskit.circuit.library.CSXGate.decompositions" />

### decompositions

Get the decompositions of the instruction from the SessionEquivalenceLibrary.

<span id="qiskit.circuit.library.CSXGate.definition" />

### definition

Return definition in terms of other basic gates. If the gate has open controls, as determined from self.ctrl\_state, the returned definition is conjugated with X without changing the internal \_definition.

**Return type**

`List`

<span id="qiskit.circuit.library.CSXGate.duration" />

### duration

Get the duration.

<span id="qiskit.circuit.library.CSXGate.label" />

### label

Return instruction label

**Return type**

`str`

<span id="qiskit.circuit.library.CSXGate.name" />

### name

Get name of gate. If the gate has open controls the gate name will become:

> \<original\_name\_o\<ctrl\_state>

where \<original\_name> is the gate name for the default case of closed control qubits and \<ctrl\_state> is the integer value of the control state for the gate.

**Return type**

`str`

<span id="qiskit.circuit.library.CSXGate.num_clbits" />

### num\_clbits

Return the number of clbits.

<span id="qiskit.circuit.library.CSXGate.num_ctrl_qubits" />

### num\_ctrl\_qubits

Get number of control qubits.

**Returns**

The number of control qubits for the gate.

**Return type**

int

<span id="qiskit.circuit.library.CSXGate.num_qubits" />

### num\_qubits

Return the number of qubits.

<span id="qiskit.circuit.library.CSXGate.params" />

### params

Get parameters from base\_gate.

**Returns**

List of gate parameters.

**Return type**

list

**Raises**

**CircuitError** – Controlled gate does not define a base gate

<span id="qiskit.circuit.library.CSXGate.unit" />

### unit

Get the time unit of duration.

